# NebulaGate-Protocol

./: README.md
backend/: package.json
backend/src/: app.module.ts  main.ts
backend/src/access/: access.controller.ts  access.module.ts  access.service.ts
backend/src/access/entities/: access-token.entity.ts
backend/src/eligibility/: eligibility.controller.ts  eligibility.module.ts  eligibility.service.ts
backend/src/jwt/: jwt.module.ts  jwt.service.ts
backend/src/jwt/entities/: jwt-session.entity.ts
backend/src/policy/: policy.controller.ts  policy.module.ts  policy.service.ts
backend/src/policy/dto/: policy.dto.ts
backend/src/policy/entities/: policy.entity.ts
backend/src/stellar/: stellar.service.ts
contracts/: Cargo.toml
contracts/access-token/: Cargo.toml
contracts/access-token/src/: lib.rs
contracts/eligibility-engine/: Cargo.toml
contracts/eligibility-engine/src/: lib.rs
contracts/policy-registry/: Cargo.toml
contracts/policy-registry/src/: lib.rs
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: wallet.ts
frontend/src/types/: index.ts
sdk/js-sdk/: package.json  tsconfig.json
sdk/js-sdk/src/: index.ts  types.ts
