[package]
name = "policy-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.0.0" }
soroban-env-common = "20.0.0"
uuid = { version = "1.0", features = ["v4"] }

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["test"] }